--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
 <body>
+</center>
+  
+<h1>Welcome to Sakavi's Page</h1>
+</center>
+<center>
+<h2>Hello World</h2>
+<p>This page that will transmit the ideas I have into the world.</p>
+</center>
 
-<h1>Welcome to RSakavi Page</h1>
 <h2>Heading 2</h2>
 <h3>Heading 3</h3>
 <h4>Heading 4</h4>
